Multiline Label: prevent weird overflow ellipsis
in IE

--- a/src/scss/themes/ng/body.scss
+++ b/src/scss/themes/ng/body.scss
@@ -1670,6 +1670,7 @@ a[role="button"].cui-button-appearance-link {
 	> .cui-label-content {
 		flex: 1 1 auto;
 		white-space: normal;
+		overflow: visible;
 	}
 
 	.cui-label-content span {
